# actions-demo

./: .coveragerc  LICENSE  README.md  example_usage.py  pyproject.toml  pytest.ini  requirements.txt  test_pdf_utils.py
.github/workflows/: python-app.yml
src/: __init__.py  pdf_utils.py
tests/: test_pdf_utils.py
